fix: topics collapse jitter

--- a/course-v3/assets/css/course-v3.scss
+++ b/course-v3/assets/css/course-v3.scss
@@ -337,6 +337,10 @@ pre {
     }
   }
 
+  .info-topics {
+    flex-basis: 50% !important;
+  }
+
   .course-info {
     gap: 1rem;
 
